<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txtSurname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txtNumber"
        android:inputType="number" />

    <Switch
        android:id="@+id/hasChildren"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hasChildren" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbFemale" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMale" />
    </RadioGroup>

    <TextView
        android:id="@+id/civilStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:capitalize="none"
        android:text="@string/civilStat" />

    <Spinner
        android:id="@+id/mcStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset" />

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send" />
    </LinearLayout>

</LinearLayout>